# GT-STACER

./: CHANGELOG.md  README.md  Text File.txt  index.html  manifest.webmanifest  sw.js
GT-STACER/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
GT-STACER/applications/: gt-stacer.desktop
GT-STACER/gt-stacer/: CMakeLists.txt  app.cpp  app.h  main.cpp  static.qrc
GT-STACER/gt-stacer-core/: CMakeLists.txt
GT-STACER/gt-stacer-core/Info/: battery_info.cpp  battery_info.h  cpu_info.cpp  cpu_info.h  disk_info.cpp  disk_info.h  gpu_info.cpp  gpu_info.h  memory_info.cpp  memory_info.h  network_info.cpp  network_info.h  process_info.cpp  process_info.h  system_info.cpp  system_info.h  temperature_info.cpp  temperature_info.h
GT-STACER/gt-stacer-core/Tools/: apt_source_tool.cpp  apt_source_tool.h  notification_tool.cpp  notification_tool.h  package_tool.cpp  package_tool.h  service_tool.cpp  service_tool.h  startup_tool.cpp  startup_tool.h
GT-STACER/gt-stacer-core/Utils/: command_util.cpp  command_util.h  file_util.cpp  file_util.h  format_util.cpp  format_util.h
GT-STACER/gt-stacer/Dialogs/: about_dialog.cpp  app_cache_dialog.cpp  app_cache_dialog.h  edit_source_dialog.cpp  edit_source_dialog.h  quit_confirm_dialog.cpp  quit_confirm_dialog.h  startup_add_dialog.cpp  startup_add_dialog.h  welcome_dialog.cpp  welcome_dialog.h
GT-STACER/gt-stacer/Managers/: alert_manager.cpp  alert_manager.h  app_manager.cpp  app_manager.h  info_manager.cpp  info_manager.h  setting_manager.cpp  setting_manager.h  tool_manager.cpp  tool_manager.h
GT-STACER/gt-stacer/Pages/AptSourceManager/: apt_source_page.cpp  apt_source_page.h  apt_source_page.ui
GT-STACER/gt-stacer/Pages/Dashboard/: dashboard_page.cpp  dashboard_page.h  dashboard_page.ui
GT-STACER/gt-stacer/Pages/Helpers/: helpers_page.cpp  helpers_page.h  helpers_page.ui
GT-STACER/gt-stacer/Pages/Processes/: processes_page.cpp  processes_page.h  processes_page.ui
GT-STACER/gt-stacer/Pages/Resources/: resources_page.cpp  resources_page.h  resources_page.ui
GT-STACER/gt-stacer/Pages/Services/: services_page.cpp  services_page.h  services_page.ui
GT-STACER/gt-stacer/Pages/Settings/: settings_page.cpp  settings_page.h  settings_page.ui
GT-STACER/gt-stacer/Pages/StartupApps/: startup_apps_page.cpp  startup_apps_page.h  startup_apps_page.ui
GT-STACER/gt-stacer/Pages/SystemCleaner/: system_cleaner_page.cpp  system_cleaner_page.h  system_cleaner_page.ui
GT-STACER/gt-stacer/Pages/Uninstaller/: uninstaller_page.cpp  uninstaller_page.h  uninstaller_page.ui
GT-STACER/gt-stacer/Widgets/: circular_gauge.cpp  circular_gauge.h  cleaner_card.cpp  cleaner_card.h  cleaner_icons.h  empty_state.cpp  empty_state.h  line_chart.cpp  line_chart.h  loading_overlay.cpp  loading_overlay.h  per_core_bars.cpp  per_core_bars.h  sidebar.cpp  sidebar.h  sidebar_icons.h  skeleton_rows.cpp  skeleton_rows.h
GT-STACER/gt-stacer/static/themes/dark/: style.qss
GT-STACER/gt-stacer/static/themes/light/: style.qss
GT-STACER/packaging/: build-appimage.sh  build-deb.sh  build-rpm.sh
GT-STACER/packaging/debian/: control
GT-STACER/packaging/rpm/: gt-staser.spec
GT-STACER/scripts/: build-all.sh
GT-STACER/translations/: gt-stacer_ar.ts  gt-stacer_de.ts  gt-stacer_en.ts  gt-stacer_fr.ts  gt-stacer_hi.ts  gt-stacer_it.ts  gt-stacer_kn.ts  gt-stacer_ml.ts  gt-stacer_nl.ts  gt-stacer_oc.ts  gt-stacer_pl.ts  gt-stacer_pt.ts  gt-stacer_ru.ts  gt-stacer_sv.ts  gt-stacer_tr.ts  gt-stacer_uk.ts  gt-stacer_vi.ts  gt-stacer_zh_CN.ts  gt-stacer_zh_TW.ts  gt-staser_ar.ts  gt-staser_nl.ts  gt-staser_ru.ts  gt-staser_sv.ts  gt-staser_uk.ts  gt-staser_zh_CN.ts
assets/: app.js  styles.css
